Fixed z-index of header content

--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,7 @@ header {
   align-items: center;
   text-align: center;
   margin-top: 150px;
+  z-index: 2;
 }
 
 .header__title {
